tests/error/misc_errors/not_instanziable_err.err
Error: Expected an instantiable definition (at $FILE:6:11)
  | 
4 | @compile_guppy
5 | def main() -> frozenarray[int, 3]:
6 |     return frozenarray(1, 11, 21)
  |            ^^^^^^^^^^^ Expected an instantiable definition, got type `frozenarray`

Note: Type frozenarray is not an instaziable type

Guppy compilation failed due to 1 previous error
